# gdc-submission

./: .gitignore  README.md  populate_db.py  pyproject.toml
app/api/: README.md  api.py  example_api_usage.py  run_api.py
app/db/: __init__.py  models.py  operations.py  personas.db
app/frontend/: README.md  run_streamlit.py  streamlit_app backup.py  streamlit_app.py
gdc-persona-application/: GD1_Gather.ipynb
gdc-persona-application/agents/: base_types.py  run_session.py
gdc-persona-application/baseline_personas/: 2d33bd32-ca14-4ab2-813e-8b1eb0fea04d_English.json  88171568-e996-4ba5-8bd8-597c3cbd3033_English.json  (+4 more)
notebooks/: GD1_Gather.ipynb  visualize_conversaition_differences.ipynb
personas/: 1904d983-c957-48f6-8dda-477fb4686eac_English.json  410b7195-cfcd-4fc2-a6a5-ba0f488e861d_English.json  a97a40fc-c4ba-4e1e-8be0-c1782d78923b_English.json  ac9d8ff5-4a56-414b-8142-88bb03da0e54_English.json  ac9d8ff5-4a56-414b-8142-88bb03da0e54_Hindi.json  c788621b-5a64-4b6b-8644-2fdab8e34616_English.json  db229d3f-1af8-493f-b64f-726afe5cfeb3_English.json  db619bbc-f9b0-42a2-a9a2-3831fd422510_English.json  ede8c0ad-88ec-45b5-a497-2224515d7295_English.json  ede8c0ad-88ec-45b5-a497-2224515d7295_Spanish.json  f0d48a42-4058-4b2e-b90e-70dc562f0357_English.json  fd3ea234-eb9d-4d3b-8aba-ce3c6726543f_Chinese (China).json  fd3ea234-eb9d-4d3b-8aba-ce3c6726543f_English.json
scripts/: populate_db.py
simulacra/: README.md  agent.py  agent_v2.py  chat.py  dashboard.py  requirements.txt  scratchpad.ipynb  types.py
src/: README.md  format_persona_data.py
src/agents/: base_types.py  (+1 more)
(+25 files in other folders)
